2023-02-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use Unicode symbol for minus in scientific e notation

2023-01-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add option, in preferences, to change symbols used for output of digits 10 and 11 in duodecimal numbers (new default is A and B)

2023-01-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Place "Inactive" at top of categories list

2022-12-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Align completion list to beginning of word

2022-12-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix opening customize keypad buttons a second time after the window has been closed with method other than using the close button
	* Fix title of customize keypad buttons window

2022-12-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fixes for completion list opened upwards
	* Disable Apply, in functions dialog, for log() function

2022-12-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix output of result when factorization conversion specified in expression (e.g. "350 to factors"), and when conversion is performed using a separate expression (e.g. "520 m" ENTER "to ft" ENTER)

2022-11-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use history font for RPN stack list

2022-10-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix unit names dialog

2022-09-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Show exchange rates source (and update time) for current calculation in tooltip

2022-09-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add "Clear history" to available keyboard shortcut and button actions
	* Add support for "clear" and "clear history" qalc commands
	* Avoid truncation of long completion items in the middle of a Unicode symbol

2022-09-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix "Set Prefix" for auto-calculated result
	* Allow curly braces in expression entry (replaced by paretheses)
	* Fix quotation marks in comments