@@ -1,3 +1,12 @@
+2023-02-19 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Do not show prefix + unit in completion list if conflicts with variable or function
+
+2023-02-06 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fixes for scientific notation with bases other than 10
+	* Fix completion list with a single item for some GTK themes (e.g. Breeze, Ambiance)
+
 2023-02-01 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Use Unicode symbol for minus in scientific e notation
